welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:6: error: type mismatch;
 found   : Boolean(false)
 required: Int
  } else return false
                ^