welcome.lessons.welcome.bat.bool2.TeaParty.scala.code
def teaParty(tea:Int, candy:Int): Int = {
  if (tea>=5 && candy>=10 || tea>=10 && candy>=5) {
    return 2
  } else if (candy>=5 && tea>=5) {
    return 1
  } else return false
}